<resources>
    <string name="app_name">Three Stones</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_main_label_textview">Welcome to Three Stones!</string>
    <string name="newgame_button">New Game</string>
    <string name="resumegame_button">Resume Game</string>
    <string name="exit_button">Exit</string>
    <string name="namelabel">Created by Alexander Kuhles</string>
    <string name="buttonpadding">20dp</string>
    <string name="radiobutton_black_title">Black</string>
    <string name="radiobutton_white_title">White</string>
    <string name="radiobutton_clear_title">Clear</string>
</resources>
