<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_main_label_textview"
            android:textStyle="bold"
            android:textSize="40sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namelabel"
            android:textSize="20sp"
            android:paddingBottom="180sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="200dp"
            android:gravity="center">


            <Button
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:text="@string/newgame_button"
                android:textSize="25sp"/>
                <!--android:onClick="onNewGame"-->
            <Button
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:text="@string/resumegame_button"
                android:textSize="25sp"/>
                <!--android:onClick="onResumeGame"-->
            <Button
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:text="@string/exit_button"
                android:textSize="25sp"
                android:onClick="onExit"/>
            </LinearLayout>
        </LinearLayout>



</LinearLayout>
